--- a/IdealWaffle/wwwroot/index.html
+++ b/IdealWaffle/wwwroot/index.html
@@ -6,11 +6,8 @@
     <title>Ideal Waffle</title>
     <script src="lib/mechanism.js"></script>
     <script src="app/app.js"></script>
+    <link rel="stylesheet" href="style.css" type="text/css" /><style ></style>
 </head>
 <body>
-    <!--
-        Right-Click on this file
-        and select "View in Browser"
-    -->
 </body>
 </html>
